# syncTimerMCU

./: .gitignore  .gitmodules  LIcense  README.md  ROADMAP.md
.github/workflows/: ci-build.yml  hil_timebase.yml
MCUMaster/: CMakeLists.txt
MCUMaster/main/: CMakeLists.txt
doc/: WireProtocol.md
scripts/: build_debug_tests.sh  build_relase.sh  hil_check_M1.py  hil_check_timebase.py
stm32/app/: CMakeLists.txt
stm32/app/include/: FreeRTOSConfig.h  Test.h  spi_link.h  sync_master.h  sync_slave.h  timebase.h  uart_log.h  wire_codec.h
stm32/app/linker/: stm32f411ceu6.ld
stm32/app/src/: Test.c  main.c  spi_link.c  sync_master.c  sync_slave.c  timebase.c  wire_codec.c
